Reduce footer font size to 1.4rem and remove bold to fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -296,8 +296,7 @@ canvas {
 }
 
 .site-footer p {
-    font-size: 3rem;
-    font-weight: 900;
+    font-size: 1.4rem;
 }
 
 .site-footer a {
